# xmonitor

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
xmonitor/cmds/: __init__.py  glances.py  logrotate.py
xmonitor/utils/: __init__.py  attribute.py  glances.py  logrotate.py
