; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#metadata
[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

; view at https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#options
[options]
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    xarg-python >= 1.3
    xmanual >= 0.4
    tabulate
    glances
    bottle

[options.entry_points]
console_scripts =
    xmon = xmonitor.cmds:main
